--- a/BotApplication/BotApplication.csproj
+++ b/BotApplication/BotApplication.csproj
@@ -62,8 +62,8 @@
     <Compile Include="MessageTemplatesStorage.cs" />
     <Compile Include="Models\Chat.cs" />
     <Compile Include="Models\Message.cs" />
-    <Compile Include="Models\ResponseModel.cs" />
-    <Compile Include="Models\ResultModel.cs" />
+    <Compile Include="Models\Response.cs" />
+    <Compile Include="Models\Result.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
